--- a/SAS Foundation/CodesastoPython.ipynb
+++ b/SAS Foundation/CodesastoPython.ipynb
@@ -16,7 +16,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.11.7"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
