--- a/SAS Foundation/sastoparquet.ipynb
+++ b/SAS Foundation/sastoparquet.ipynb
@@ -65,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
