--- a/SAS Foundation/sastoparquet.ipynb
+++ b/SAS Foundation/sastoparquet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,14 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Source directory containing SAS dataset files\n",
-    "source_directory = \"C:/Users/comma/GitRepo/sas-access-samples/SAS Foundation/sasdataset/\"\n",
+    "source_directory = \"C:/Users/comma/Github/workspace/sas-access-samples/SAS Foundation/sasdataset/\"\n",
     "# Target directory for the Parquet files\n",
-    "target_directory = \"C:/Users/comma/GitRepo/sas-access-samples/SAS Foundation/parquetdataset/\"\n",
+    "target_directory = \"C:/Users/comma/Github/workspace/sas-access-samples/SAS Foundation/parquetdataset/\"\n",
     "\n",
     "# Automatically find all SAS files in the source directory\n",
     "sas_file_paths = glob.glob(source_directory + \"*.sas7bdat\")\n",
@@ -65,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
